--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 <body>
 
   <section class="sky">
-    <img src="images/new.png" alt="mountains" id="mountains"/>
-    <img src="images/cloud.png" alt="cloud" id="cloud-one"/>
-    <img src="images/cloud.png" alt="cloud" id="cloud-two"/>
-    <img src="images/cloud.png" alt="cloud" id="cloud-three"/>
-    <img src="images/cloud.png" alt="cloud" id="cloud-four"/>
-    <img src="images/cloud.png" alt="cloud" id="cloud-five"/>
+    <img src="images/mountains.png" alt="mountains" id="mountains"/>
+    <img src="images/clouds.png" alt="cloud" id="cloud-one"/>
+    <img src="images/clouds.png" alt="cloud" id="cloud-two"/>
+    <img src="images/clouds.png" alt="cloud" id="cloud-three"/>
+    <img src="images/clouds.png" alt="cloud" id="cloud-four"/>
+    <img src="images/clouds.png" alt="cloud" id="cloud-five"/>
+    <img src="images/clouds.png" alt="cloud" id="cloud-six"/>
+
     <!-- <img src="images/js.png" alt="js" id="javascript"/>
     <img src="images/react.png" alt="react" id="react"/>
     <img src="images/gql.png" alt="gql" id="graphql"/> -->
