--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- <header>
+    </header>
+    <div class="header">
+        
+        <h4>Socials</h4>
+    </div> -->
 
   <section class="sky">
+    <h1 id="name">Karsten Jepsen</h1>
+    <img src="images/linkedin.png" alt="linkedin" id="linkedin"/>
+    <img src="images/github.png" alt="github" id="github"/>
+    <img src="images/mail.png" alt="mail" id="mail"/>
     <img src="images/mountains.png" alt="mountains" id="mountains"/>
     <img src="images/clouds.png" alt="cloud" id="cloud-one"/>
     <img src="images/clouds.png" alt="cloud" id="cloud-two"/>
@@ -15,6 +25,8 @@
     <img src="images/clouds.png" alt="cloud" id="cloud-four"/>
     <img src="images/clouds.png" alt="cloud" id="cloud-five"/>
     <img src="images/clouds.png" alt="cloud" id="cloud-six"/>
+    <img src="images/birds.png" alt="cloud" id="birds"/>
+    <!-- <img src="images/redbirds.png" alt="cloud" id="redbirds"/> -->
 
     <!-- <img src="images/js.png" alt="js" id="javascript"/>
     <img src="images/react.png" alt="react" id="react"/>
